[package]
name = "raster-reshaper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = ["serialize"]}
bevy-inspector-egui = "0.25.2"
bevy_file_dialog = "0.6.0"
bevy_asset_loader = "0.21.0"
bevy_mod_picking = { version = "0.20.1"}
bevy_cosmic_edit = "0.23.0"
bytemuck = "1.16.3"
crossbeam-channel = "0.5.13"
futures = "0.3.30"
petgraph = "0.6.5"
serde = { version = "1.0.210" }
wgpu = { version = "0.20", default-features = false, features = [
  "wgsl",
  "dx12",
  "metal",
  "naga-ir",
  "fragile-send-sync-non-atomic-wasm",
  "serde"
]}
rmp-serde = "1.3.0"
uuid = "1.10.0"

[features]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
